Fix table width

--- a/Server/apps/mpconsole/templates/client_dashboard.html
+++ b/Server/apps/mpconsole/templates/client_dashboard.html
@@ -83,7 +83,7 @@
 					</div>
 					<!-- /.panel-heading -->
 					<div class="panel-body">
-						<table id="invTable" class="table table-striped table-condensed table-bordered table-hover" data-show-export="true"></table>
+                        <table id="invTable" class="table table-striped table-condensed table-bordered table-hover" data-show-export="true" style="width:auto"></table>
 					</div>
 				</div>
 			</div>
