--- a/Server/apps/mpconsole/templates/patches/patches_custom.html
+++ b/Server/apps/mpconsole/templates/patches/patches_custom.html
@@ -38,93 +38,80 @@
 	<script>
 	$( document ).ready(function()
 	{
-			$('#table').bootstrapTable(
+		$('#table').bootstrapTable(
+		{
+			url: "/patches/custom/list",
+			striped: true,
+			pagination: true,
+			sidePagination: 'client',
+			showRefresh: true,
+			pageList: ['10', '25', '50', '100', 'All'],
+			search: true,
+			idField: 'puuid',
+			sortable: true,
+			detailFormatter: detailFormatter,
+			icons: {
+				refresh: 'fa fa-refresh',
+				toggle: 'fa fa-th-list',
+				columns: 'fa fa-columns',
+				detailOpen: 'glyphicon glyphicon-info-sign',
+				detailClose: 'glyphicon glyphicon-minus-sign'
+			},
+			columns: [
+			{% if session.role[0] == 1 %}
 			{
-				striped: true,
-				pagination: true,
-				sidePagination: 'client',
-				pageList: ['10', '25', '50', '100', 'All'],
-				search: true,
-				showRefresh: true,
-				resizable: false,
-				sortable: true,
-				showColumns: false,
-				detailView: false,
-				detailFormatter: detailFormatter,
-				icons: {
-					refresh: 'fa fa-refresh',
-					toggle: 'fa fa-th-list',
-					columns: 'fa fa-columns',
-					detailOpen: 'glyphicon glyphicon-info-sign',
-					detailClose: 'glyphicon glyphicon-minus-sign'
-				},
-				idField: 'puuid',
-				columns: [
-				{% if session.role[0] == 1 %}
-				{
-						field: 'state',
-						checkbox: true,
-						rowspan: 1,
-						align: 'center',
-						valign: 'middle'
-				},
-				{% endif %}
-				{
-					field: 'operate',
-					title: '',
+					field: 'state',
+					checkbox: true,
+					rowspan: 1,
 					align: 'center',
-					events: operateEvents,
-					formatter: operateFormatter
-				},
-				{% for col in columnsAll %}
+					valign: 'middle'
+			},
+			{% endif %}
+			{
+				field: 'operate',
+				title: '',
+				align: 'center',
+				events: operateEvents,
+				formatter: operateFormatter
+			},
+			{% for col in columnsAll %}
 
-					{% if col.name in columns %}
-						{
-							field: '{{col.name}}',
-							title: '{{col.info}}',
-							{% if col.name ==  'puuid' or col.name == 'pkg_path' or col.name == 'pkg_url' or col.name == 'description'%}
-							visible: false,
-							{% endif %}
-							sortable: true,
-
-							{% if col.name == 'active' and session.role[0] == 1 %}
-							editable: {
-								type: 'select',
-								url:  '/patches/custom/active',
-								source: [
-									{value: 0, text: 'False'},
-									{value: 1, text: 'True'},
-								]
-							},
-							{% endif %}
-							{% if col.name == 'patch_state' and session.role[0] == 1 %}
-							editable: {
-								type: 'select',
-								url:  '/patches/custom/state',
-								source: [
-									{value: 'Production', text: 'Production'},
-									{value: 'QA', text: 'QA'},
-									{value: 'Create', text: 'Create'},
-									{value: 'AutoPKG', text: 'AutoPKG'},
-								]
-							},
-							{% endif %}
-						},
-					{% endif %}
-				{% endfor %}
-				],
-				data: [
-				{% for patch in data %}
-				{
-					{% for col in columns %}
-						{% if col != 'description'%}
-							{{col}}: '{{patch[col]}}',
+				{% if col.name in columns %}
+					{
+						field: '{{col.name}}',
+						title: '{{col.info}}',
+						{% if col.name ==  'puuid' or col.name == 'pkg_path' or col.name == 'pkg_url' or col.name == 'description'%}
+						visible: false,
 						{% endif %}
-					{% endfor %}
-				},
-				{% endfor %}
-				]
-			});
+						sortable: true,
+
+						{% if col.name == 'active' and session.role[0] == 1 %}
+						editable: {
+							type: 'select',
+							url:  '/patches/custom/active',
+							source: [
+								{value: 0, text: 'False'},
+								{value: 1, text: 'True'},
+							]
+						},
+						{% endif %}
+						{% if col.name == 'patch_state' and session.role[0] == 1 %}
+						editable: {
+							type: 'select',
+							url:  '/patches/custom/state',
+							source: [
+								{value: 'Production', text: 'Production'},
+								{value: 'QA', text: 'QA'},
+								{value: 'Create', text: 'Create'},
+								{value: 'AutoPKG', text: 'AutoPKG'},
+							]
+						},
+						{% endif %}
+					},
+				{% endif %}
+			{% endfor %}
+			]
+		});
 	});
 
 	function detailFormatter(index, row)
@@ -202,19 +189,21 @@
 
 	function operateFormatter(value, row, index)
 	{
-		if ( '{{session.role[0]}}' == 1 ) {
-			return [
-				'<a class="edit" href="javascript:void(0)" title="Edit">',
-				'<i class="fa fa-pencil fa-lg" aria-hidden="true"></i>',
-				'</a>&nbsp;'
-			].join('');
-		} else {
-			return [
-				'<a class="edit" href="javascript:void(0)" title="Edit">',
-				'<i class="fa fa-search fa-lg" aria-hidden="true"></i>',
-				'</a>&nbsp;'
-			].join('');
-		}
+		var htmlData = [];
+		htmlData.push('<table><tr><td>')
+		{% if session.role[0] == 1 %}
+		htmlData.push('<a class="edit" href="javascript:void(0)" title="Edit Patch">');
+		htmlData.push('<i class="fa fa-pencil fa-lg" aria-hidden="true"></i>');
+		{% else %}
+		htmlData.push('<a class="edit" href="javascript:void(0)" title="Patch Data">');
+		htmlData.push('<i class="fa fa-search fa-lg" aria-hidden="true"></i>');
+		{% endif %}
+		htmlData.push('</a>');
+		htmlData.push('</td><td>');
+		htmlData.push('<a class="download" href="/mp-content' + row['pkg_url'] + '" title="Download Patch" target=_blank>');
+		htmlData.push('<i class="fa fa-download fa-lg"></i></a>');
+		htmlData.push('</td></tr></table>');
+		return htmlData.join('');
 	}
 
 	/* Function used to close Modal window from iframe */
