--- a/Server/apps/mpconsole/static/css/mp.css
+++ b/Server/apps/mpconsole/static/css/mp.css
@@ -45,7 +45,6 @@ body.modal-open .modal .modal-dialog {
 
 /* Saving Modal Overlay */
 
-
 #overlay {
 	width:100%;
 	height:100%;
@@ -55,6 +54,16 @@ body.modal-open .modal .modal-dialog {
 	opacity: 0.7; /* also -moz-opacity, etc. */
 	z-index: 10;
 	display:none;
+}
+
+#modalLoading {
+	width:100%;
+	height:100%;
+	background-color: black;
+	position: fixed;
+	top: 0; right: 0; bottom: 0; left: 0;
+	opacity: 0.7; /* also -moz-opacity, etc. */
+	z-index: 10;
 }
 
 
