--- a/Server/apps/mpconsole/templates/software/software_group_tasks.html
+++ b/Server/apps/mpconsole/templates/software/software_group_tasks.html
@@ -13,13 +13,16 @@
 			border-top: 2px;
 		}
 	</style>
+
 {%  endblock %}
 
 {% block body %}
 	<div>
 		<table id="tasksTable" class="table table-condensed" data-toolbar="#tasksToolbar" data-show-export="true" data-show-columns="true">
 			<div id="tasksToolbar">
+				{% if session.role[0] == 1 %}
 				<button id="saveGroupDataButton" type="button" class="btn btn-default" title="Save Group Data"><i class="glyphicon glyphicon-floppy-save"></i></button>
+				{% endif %}
 			</div>
 		</table>
 		<div id="group_id" hidden>{{group_id}}</div>
@@ -42,10 +45,14 @@
 	<script src="{{ url_for('static', filename='bower_components/col-resizable/colResizable-1.6.min.js') }}"></script>
 
 	<script>
-
 	var _cols = [{
 					field: 'selected',
+					{% if session.role[0] == 1 %}
 					checkbox: true,
+					{% else %}
+					checkbox: false,
+					visible: false,
+					{% endif %}
 					rowspan: 1,
 					align: 'center',
 					valign: 'middle'
@@ -53,6 +60,8 @@
 
 	_cols.push.apply(_cols, {{data["columns"] | tojson}});
 	var _rows = {{data["rows"] | tojson}};
+
+
 
 	$( document ).ready(function()
 	{
@@ -85,6 +94,7 @@
 		});
 
 		removeSelected();
+		window.parent.$("#modalLoading").hide();
 	});
 
 	/* Removed the selected row color from the table */
