--- a/Source/MacPatch/MPCatalog/MPCatalog/MPCatalog_MainMenu.xib
+++ b/Source/MacPatch/MPCatalog/MPCatalog/MPCatalog_MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="17B45a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="17C88" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12121"/>
@@ -693,12 +693,12 @@
                 <rect key="frame" x="0.0" y="0.0" width="800" height="400"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView focusRingType="none" autohidesScrollers="YES" horizontalLineScroll="22" horizontalPageScroll="10" verticalLineScroll="22" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="546">
+                    <scrollView focusRingType="none" misplaced="YES" autohidesScrollers="YES" horizontalLineScroll="22" horizontalPageScroll="10" verticalLineScroll="22" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="546">
                         <rect key="frame" x="-1" y="65" width="802" height="336"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="rzz-uS-O6F">
                             <rect key="frame" x="1" y="0.0" width="800" height="335"/>
-                            <autoresizingMask key="autoresizingMask"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" selectionHighlightStyle="none" alternatingRowBackgroundColors="YES" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="20" headerView="550" id="549">
                                     <rect key="frame" x="0.0" y="0.0" width="800" height="312"/>
@@ -993,7 +993,7 @@
                         <popUpButton key="view" verticalHuggingPriority="750" id="828">
                             <rect key="frame" x="0.0" y="14" width="120" height="19"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <popUpButtonCell key="cell" type="roundRect" bezelStyle="roundedRect" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="829">
+                            <popUpButtonCell key="cell" type="roundRect" bezelStyle="roundedRect" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" continuous="YES" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="829">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="cellTitle"/>
                                 <menu key="menu" title="OtherViews" id="830">
@@ -1024,7 +1024,7 @@
                     <toolbarItem reference="706"/>
                 </defaultToolbarItems>
             </toolbar>
-            <point key="canvasLocation" x="465" y="374"/>
+            <point key="canvasLocation" x="273" y="387"/>
         </window>
         <customObject id="494" customClass="MPCatalogAppDelegate">
             <connections>
