--- a/Server/apps/mpconsole/templates/registration.html
+++ b/Server/apps/mpconsole/templates/registration.html
@@ -18,12 +18,19 @@ Agent Registration
 	<!-- Tab panes -->
 	<!-- Nav tabs -->
 	<ul class="nav nav-tabs">
+        {% if session.role[0] == 1 %}
 		<li {% if selectedTab == 1 %}class="active"{% endif %}><a href="#settings" data-toggle="tab">Settings</a></li>
 		<li {% if selectedTab == 2 %}class="active"{% endif %}><a href="#keys" data-toggle="tab">Keys</a></li>
-		<li {% if selectedTab == 3 %}class="active"{% endif %}><a href="#regClients" data-toggle="tab">Registered Clients</a></li>
+        <li {% if selectedTab == 3 %}class="active"{% endif %}><a href="#regClients" data-toggle="tab">Registered Clients</a></li>
+        {% else %}
+        <li {% if selectedTab == 1 %}class="active"{% endif %}><a href="#regClients" data-toggle="tab">Registered Clients</a></li>
+        {% endif %}
+        {% if session.role[0] == 1 %}
 		<li {% if selectedTab == 4 %}class="active"{% endif %}><a href="#parkedClients" data-toggle="tab">Parked Clients</a></li>
+        {% endif %}
 	</ul>
 	<div class="tab-content">
+        {% if session.role[0] == 1 %}
 		<div class="tab-pane fade {% if selectedTab == 1 %}in active{% endif %}" id="settings">
 			<h4>Registration Settings</h4>
 			<form role="form" id="settingsForm">
@@ -69,31 +76,38 @@ Agent Registration
 						</div>
 					</div>
 				</div>
-			</form>
+            </form>
 		</div>
-
 		<div class="tab-pane fade {% if selectedTab == 2 %}in active{% endif %}" id="keys">
 			<h4>Registration Keys</h4>
-			<table id="tableKeys" class="table" data-row-style="rowStyle" data-toolbar="#toolbarKeys">
+			<table id="tableKeys" class="table" data-row-style="rowStyle" data-toolbar="#toolbarKeys" data-side-pagination="client" data-pagination="true" data-search="true">
 				<div id="toolbarKeys">
 					<button id="addKeyButton" type="button" class="btn btn-default" title="Add Registration Key"><i class="glyphicon glyphicon-plus"></i></button>
 				</div>
 			</table>
 		</div>
-
-		<div class="tab-pane fade {% if selectedTab == 3 %}in active{% endif %}" id="regClients">
+        <div class="tab-pane fade {% if selectedTab == 3 %}in active{% endif %}" id="regClients">
 			<h4>Registred Clients</h4>
-			<table id="tableClients" class="table" data-row-style="rowStyle" data-toolbar="#toolbarClients">
+			<table id="tableClients" class="table" data-row-style="rowStyle" data-toolbar="#toolbarClients" data-side-pagination="client" data-pagination="true" data-search="true">
 				<div id="toolbarClients">
 				</div>
 			</table>
 		</div>
-
-		<div class="tab-pane fade {% if selectedTab == 4 %}in active{% endif %}" id="parkedClients">
-			<h4>Parked Clients</h4>
-			<table id="tableParkedClients" class="table" data-row-style="rowStyle" data-show-export="true">
+        {% else %}
+        <div class="tab-pane fade {% if selectedTab == 1 %}in active{% endif %}" id="regClients">
+			<table id="tableClients" class="table" data-row-style="rowStyle" data-toolbar="#toolbarClients" data-side-pagination="client" data-pagination="true" data-search="true">
+				<div id="toolbarClients">
+				</div>
 			</table>
 		</div>
+        {% endif %}
+        {% if session.role[0] == 1 %}
+		<div class="tab-pane fade {% if selectedTab == 4 %}in active{% endif %}" id="parkedClients">
+			<h4>Parked Clients</h4>
+			<table id="tableParkedClients" class="table" data-row-style="rowStyle" data-show-export="true" data-side-pagination="client" data-pagination="true" data-search="true">
+			</table>
+		</div>
+        {% endif %}
 	</div>
 
 </div>
@@ -129,37 +143,16 @@ Agent Registration
 	$( document ).ready(function()
 	{
 		$('#datetimepickerA').datetimepicker();
-
+        {% if session.role[0] == 1 %}
 		$('#tableKeys').bootstrapTable(
 		{
 			striped: true,
-			ajax: function loadMyRows(params)
-			{
-				if (params.data.search == '') {
-					params.data.search = undefined;
-				}
-				// /profiles/group/<groupid>
-				var _url = "/registration/keys";
-				$.ajax({
-					type: 'GET',
-					url: _url,
-					cache: false,
-					dataType: 'json',
-					success: function(res)
-					{
-						params.success({
-							total: res.total,
-							rows: res.data
-						});
-					}
-				});
-			},
+			url: "/registration/keys",
 			search: true,
 			pageSize: 20,
 			pageList: [5, 10, 20, 50, 100, 200],
 			pagination: true,
 			queryParamsType: "limit",
-			sidePagination: "server",
 			showRefresh: true,
 			columns: [
 				{
@@ -182,37 +175,16 @@ Agent Registration
 				{% endfor %}
 			]
 		});
-
+        {% endif %}
 		$('#tableClients').bootstrapTable(
 		{
 			striped: true,
-			ajax: function loadMyRows(params)
-			{
-				if (params.data.search == '') {
-					params.data.search = undefined;
-				}
-				// /profiles/group/<groupid>
-				var _url = "/registration/clients";
-				$.ajax({
-					type: 'GET',
-					url: _url,
-					cache: false,
-					dataType: 'json',
-					success: function(res)
-					{
-						params.success({
-							total: res.total,
-							rows: res.data
-						});
-					}
-				});
-			},
+			url: "/registration/clients",
 			search: true,
 			pageSize: 20,
 			pageList: [5, 10, 20, 50, 100, 200],
 			pagination: true,
 			queryParamsType: "limit",
-			sidePagination: "server",
 			showRefresh: true,
 			idField: 'cuuid',
 			columns: [
@@ -232,6 +204,7 @@ Agent Registration
 						sortable: true,
 						field: '{{col.name}}',
 						title: '{{col.label}}',
+						{% if session.role[0] == 1 %}
 						{% if col.name == 'enabled' %}
 						editable: {
 							type: 'select',
@@ -242,41 +215,21 @@ Agent Registration
 							]
 						},
 						{% endif %}
+						{% endif %}
 					},
 				{% endfor %}
 			]
 		});
-
+        {% if session.role[0] == 1 %}
 		$('#tableParkedClients').bootstrapTable(
 		{
 			striped: true,
-			ajax: function loadMyRows(params)
-			{
-				if (params.data.search == '') {
-					params.data.search = undefined;
-				}
-				// /profiles/group/<groupid>
-				var _url = "/registration/parked";
-				$.ajax({
-					type: 'GET',
-					url: _url,
-					cache: false,
-					dataType: 'json',
-					success: function(res)
-					{
-						params.success({
-							total: res.total,
-							rows: res.data
-						});
-					}
-				});
-			},
+			url: "/registration/parked",
 			search: true,
 			pageSize: 20,
 			pageList: [5, 10, 20, 50, 100, 200],
 			pagination: true,
 			queryParamsType: "limit",
-			sidePagination: "server",
 			showRefresh: true,
 			columns: [
 				{
@@ -299,7 +252,7 @@ Agent Registration
 				{% endfor %}
 			]
 		});
-
+        {% endif %}
 	});
 
 	// Keys Tab
@@ -310,10 +263,12 @@ Agent Registration
 		htmlData.push('<a class="editKey" href="javascript:void(0)" title="Edit Key">');
 		htmlData.push('<i class="fa fa-pencil" aria-hidden="true"></i>');
 		htmlData.push('</a>');
-		htmlData.push('</td><td>');
-		htmlData.push('<a class="removeKey" href="javascript:void(0)" title="Remove Key">');
-		htmlData.push('<i class="fa fa-trash-o"></i></a>');
-		htmlData.push('</td></tr></table>');
+		htmlData.push('</td>');
+		{% if session.role[0] == 1 %}
+		htmlData.push('<td><a class="removeKey" href="javascript:void(0)" title="Remove Key">');
+		htmlData.push('<i class="fa fa-trash-o"></i></a></td>');
+		{% endif %}
+		htmlData.push('</tr></table>');
 		return htmlData.join('');
 	}
 
@@ -338,6 +293,7 @@ Agent Registration
 		},
 		'click .removeKey': function (e, value, row, index)
 		{
+		{% if session.role[0] == 1 %}
 			var result = confirm("Are you sure you want to delete this key?");
 			if (result) {
 				var _url = "/registration/key/edit/" + row['rid']
@@ -355,17 +311,20 @@ Agent Registration
 					}
 				});
 			}
+		{% endif %}
 		}
 	};
 
 	// Registered Clients Tab
 	function formatterClients(value, row, index)
 	{
+	{% if session.role[0] == 1 %}
 		return [
 			'<div><a class="remove" href="javascript:void(0)" title="Remove Client">',
 			'<i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>',
 			'</a>&nbsp;&nbsp;&nbsp;</div>'
 		].join('');
+	{% endif %}
 	}
 
 	window.eventsClients =
