--- a/Server/apps/mpconsole/templates/patches/patches_apple.html
+++ b/Server/apps/mpconsole/templates/patches/patches_apple.html
@@ -38,15 +38,15 @@ Apple Patches
 	{
 			$('#table').bootstrapTable(
 			{
+			    url: "/patches/apple/list",
 				striped: true,
-				pagination: true,
-				sidePagination: 'client',
-				pageList: ['10', '20', '50', '100', 'All'],
-				search: true,
-				showRefresh: false,
-				resizable: false,
-				sortable: true,
-				showColumns: false,
+                pagination: true,
+                sidePagination: 'client',
+                showRefresh: true,
+                pageList: ['10', '25', '50', '100', 'All'],
+                search: true,
+                idField: 'akey',
+                sortable: true,
 				detailView: true,
 				detailFormatter: detailFormatter,
 				icons: {
