Add client view back

--- a/Server/apps/mpconsole/templates/base.html
+++ b/Server/apps/mpconsole/templates/base.html
@@ -100,6 +100,9 @@
 						<li>
 							<a href="{{ url_for('dashboard.index') }}"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
 						</li>
+                        <li>
+							<a href="{{ url_for('clients.clientsList') }}"><i class="fa fa-desktop fa-fw"></i> Clients</a>
+						</li>
 						<li>
 							<a href="{{ url_for('clients.clientGroups') }}"><i class="fa fa-object-group fa-fw"></i> Client Groups</a>
 						</li>
