--- a/Server/apps/mpconsole/templates/clients.html
+++ b/Server/apps/mpconsole/templates/clients.html
@@ -6,7 +6,7 @@
 {%  endblock %}
 
 {% block pageHeader %}
-Clients
+Clients - All
 {%  endblock %}
 
 {% block bodyPanel %}
@@ -23,16 +23,17 @@ Clients
 	<script>
 	$( document ).ready(function()
 	{
-			$('#table').bootstrapTable({
-
+			$('#table').bootstrapTable(
+			{
+                url: "/clients/list",
 				striped: true,
-				pagination: true,
-				sidePagination: 'client',
-				pageList: ['10', '25', '50', '100', 'All'],
-				search: true,
-				showRefresh: true,
-				resizable: true,
-				sortable: true,
+                pagination: true,
+                sidePagination: 'client',
+                showRefresh: true,
+                pageList: ['10', '25', '50', '100', 'All'],
+                search: true,
+                idField: 'cuuid',
+                sortable: true,
 				showColumns: true,
 
 				columns: [
@@ -40,7 +41,8 @@ Clients
 				{
 					field: '{{col.name}}',
 					title: '{{col.label}}',
-					{% if col.name ==  'rid' or col.name ==  'cuuid' or col.name ==  'cdate' %}
+					{% if col.name ==  'addn' or col.name ==  'cuuid' or col.name ==  'cdate'
+					 or col.name == 'macaddr' %}
 					visible: false,
 					{% endif %}
 					sortable: true
