--- a/Server/apps/mpconsole/templates/logs.html
+++ b/Server/apps/mpconsole/templates/logs.html
@@ -17,7 +17,7 @@
 
 {% block body %}
 	<div>
-		<table id="logsTable" data-toolbar="#patchesToolbar" data-show-export="true">
+		<table id="logsTable" class="table table-condensed" data-toolbar="#logsToolbar" data-show-export="true">
 			<div id="logsToolbar">
 				<button id="saveGroupDataButton" type="button" class="btn btn-default"><i class="glyphicon glyphicon-floppy-save"></i></button>
 			</div>
@@ -45,39 +45,43 @@
 	{
 		$('#logsTable').bootstrapTable(
 		{
-			striped: true,
-			url: "https://{{server}}:3600/api/v2/server/log/{{uuid}}/mpwsapi/{{skey}}",
-			search: true,
-			pageSize: 20,
-			pageList: [20, 50, 100, 200],
-			pagination: true,
-			queryParamsType: "limit",
+            pageSize: 20,
+			pageList: [20, 30, 40, 50, 100, 200],
 			pagination: true,
 			sidePagination: "client",
-			showRefresh: true,
-			sortable: true,
-			columns: [
-				{% for col in columns %}
-				{
-					field: '{{col[0]}}',
-                    title: '{{col[1]}}',
-                    {% if col[0] == 'date' %}
-                    width: 160,
-                    {% elif col[0] == 'app' or col[0]== 'level' %}
-                    width: 80,
-				    {% endif %}
+            striped: true,
+            sortable: true,
+            search: true,
+            columns: [
+			{% for col in columns %}
+            {
+                field: '{{col[0]}}',
+                title: '{{col[1]}}',
+                {% if col[0] == 'date' %}
+                width: 160,
+                {% elif col[0] == 'app' or col[0]== 'level' %}
+                width: 80,
+                {% endif %}
 
-				    {% if col[0] == 'text' %}
-                    sortable: false,
-                    {% else %}
-                    sortable: true,
-				    {% endif %}
-
+                {% if col[0] == 'text' %}
+                sortable: false,
+                {% else %}
+                sortable: true,
+                {% endif %}
+            },
+            {% endfor %}
+			],
+			data: [
+			    {% for d in data %}
+			    {
+			        {% for col in columns %}
+							{{col[0]}} : `{{ d[col[0]] }}`,
+					{% endfor %}
 				},
-				{% endfor %}
+			    {% endfor %}
 			]
-		});
-	});
+        });
 
+	});
 	</script>
 {% endblock %}
