--- a/Source/MacPatch/MPClientStatus/MPClientStatus/ClientStatusMainMenu.xib
+++ b/Source/MacPatch/MPClientStatus/MPClientStatus/ClientStatusMainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="13529" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="17D34a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12121"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -68,14 +68,18 @@
                         <action selector="openSoftwareCatalogApplications:" target="494" id="642"/>
                     </connections>
                 </menuItem>
-                <menuItem title="Tasks" hidden="YES" id="543">
+                <menuItem title="Tasks" id="543">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Tasks" id="551">
                         <items>
-                            <menuItem title="Run Inventory Scan..." id="MOJ-hi-YT2">
+                            <menuItem title="Run Inventory Scan" hidden="YES" id="MOJ-hi-YT2">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                             </menuItem>
-                            <menuItem title="Check for Agent Updates..." id="Kw5-Ky-byc">
+                            <menuItem title="Check for Agent Updates" hidden="YES" id="Kw5-Ky-byc">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                            </menuItem>
+                            <menuItem isSeparatorItem="YES" hidden="YES" id="QpB-tP-Gjs"/>
+                            <menuItem title="Collect and Post Diagnostics" id="cBL-AF-gU3">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                             </menuItem>
                         </items>
@@ -749,7 +753,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="360" height="166"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField verticalHuggingPriority="750" id="589">
+                    <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="589">
                         <rect key="frame" x="17" y="45" width="326" height="19"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="594">
@@ -758,7 +762,7 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField verticalHuggingPriority="750" id="590">
+                    <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="590">
                         <rect key="frame" x="17" y="20" width="326" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="593">
@@ -785,7 +789,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="480" height="131"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField verticalHuggingPriority="750" id="561">
+                    <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="561">
                         <rect key="frame" x="105" y="92" width="290" height="22"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="MacPatch Client Information" id="562">
@@ -799,7 +803,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="axesIndependently" image="MPBaseRoundIcon" id="564"/>
                     </imageView>
-                    <textField verticalHuggingPriority="750" id="560">
+                    <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="560">
                         <rect key="frame" x="105" y="34" width="358" height="50"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" selectable="YES" sendsActionOnEndEditing="YES" title="Multiline Label" id="563">
@@ -813,7 +817,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="sa6-VY-FkX">
                             <rect key="frame" x="1" y="0.0" width="423" height="0.0"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <autoresizingMask key="autoresizingMask"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="568" id="567">
                                     <rect key="frame" x="0.0" y="0.0" width="423" height="19"/>
@@ -925,7 +929,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="574" height="178"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField verticalHuggingPriority="750" id="iMy-tp-ciN">
+                    <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="iMy-tp-ciN">
                         <rect key="frame" x="117" y="56" width="439" height="68"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textFieldCell key="cell" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" allowsEditingTextAttributes="YES" id="iB1-7Y-D6B">
@@ -937,7 +941,7 @@ To finish the installation and restart your computer, click Restart.            
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField verticalHuggingPriority="750" id="mwm-Oi-5Fq">
+                    <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="mwm-Oi-5Fq">
                         <rect key="frame" x="117" y="132" width="439" height="22"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="justified" title="Install and Restart" allowsEditingTextAttributes="YES" id="fs5-Fp-grJ">
