--- a/Server/apps/mpconsole/templates/software/software_package_modify.html
+++ b/Server/apps/mpconsole/templates/software/software_package_modify.html
@@ -334,6 +334,7 @@
 		// Click the Finish Button at the end of the Wizard
 		function onFinishCallback()
 		{
+			alert("Hello");
 			var formData = new FormData($('#customPatchForm')[0]);
 			$.ajax({
 				type:'POST',
